refactoring, added class Transformer to collect some spread parts